--- a/HumbleCompany.API/appsettings.json
+++ b/HumbleCompany.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HumbleCompanyAPIContext": "Server=(localdb)\\mssqllocaldb;Database=HumbleCompanyAPIContext-9c89d675-1a22-4a2f-979b-12d2ae237199;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
